--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "preact-mdl": "^2.2.1",
-    "preact-router": "^2.5.7"
+    "preact-redux": "^2.0.2",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   }
 }
