--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "preact-mdl": "^2.2.1",
     "preact-redux": "^2.0.2",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
