--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "preact-cli": "^1.4.1"
   },
   "dependencies": {
+    "leaflet": "^1.2.0",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "preact": "^8.2.5",
