--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 node_modules/
 .DS_Store
+
+*.class
+*.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
