--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "7316:7316"
     volumes:
       - ./api:/opt/app
-    command: ./sbt ~reStart
+    command: ./sbt -ivy /opt/app/.ivy2 ~reStart
   app:
     image: node:8.6.0-alpine
     working_dir: /opt/app
