--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "leaflet": "^1.2.0",
+    "leaflet-draw": "^0.4.12",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "preact": "^8.2.5",
