--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "preact-cli": "^1.4.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "leaflet": "^1.2.0",
     "leaflet-draw": "^0.4.12",
     "material-design-icons": "^3.0.1",
