Use default credentials by default
If the user switches to "custom credentials", they can
input their own.

Closes #5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - "7316:7316"
     volumes:
+      - ~/.aws:/root/.aws
       - ./api:/opt/app
     command: ./sbt -ivy /opt/app/.ivy2 ~reStart
   app:
