--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "leaflet-draw": "^0.4.12",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
+    "node-sass": "^4.7.2",
     "preact": "^8.2.5",
     "preact-mdl": "^2.2.1",
     "preact-redux": "^2.0.2",
@@ -35,6 +36,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6"
   }
 }
